--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Presale PAW Token" />
+    <meta name="description" content="Donate BNB recieve PAW" />
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
@@ -18,7 +18,7 @@
     </style>
     <meta
       name="twitter:description"
-      content="Presale PAW Token"
+      content="Donate BNB recieve PAW"
     />
     <meta name="twitter:card" content="summary" />
     <meta
